2006-05-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	Correct typo, thanks to Eduardo.

2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/GNUmakefile (SEXECUTABLES): remove lilypond-ps2png.scm

	* buildscripts/lilypond-words.py (F): indent fix.

	* input/regression/tie-arpeggio-collision.ly: new file.

	* lily/tie-formatting-problem.cc (set_column_chord_outline): new
	function: store outlines per column rank.

	* lily/include/tie-configuration.hh (class Tie_configuration): add
	column_ranks_ to specification and configuration, to distinguish
	between ties for different heads in arpegiated chords.

	* lily/relocate.cc (framework_relocation): use INSTALLER_PREFIX.

	* *.py: more 4 space indents.

	* autogen.sh (conf_flags): set sensible default for with-ncsb-dir

2006-05-01  Joe Neeman  <joeneeman@gmail.com>

	* scm/lily-library.scm: Fix guile 1.6 compatibility in inf? and nan?

2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* buildscripts/pfx2ttf.fontforge (err): create OTF files.

	* scripts/abc2ly.py (dump_score): indent of 4 for python code. 

	* configure.in (LINK_GXX_STATICALLY): remove locate() call.

2006-04-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/convertrules.py (conv): indent 4 for python files.

2006-04-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/changing-defaults.itely (Creating contexts):
	Clarify \new semantics.

2006-04-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: major new sections in the
	Learning manual, slight reorg elsewhere.

2006-04-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile (MFTRACE_FLAGS): add $(outdir) to $(ENCODING_FILE) 

	* scm/framework-ps.scm (output-framework): remove PageMedia

2006-04-27  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ tweaks.itely, working.itely: new
	files, being more advanced "learning manual" chapters.
