@@ -1,3 +1,7 @@
+2006-05-02  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* lily/relocate.cc (framework_relocation): remove old relocation stuff.
+
 2006-05-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* scm/define-grob-properties.scm (all-user-grob-properties):
